# DEF-W9-04_DLRMamba

./: .env.serve  ASSETS.md  CLAUDE.md  Dockerfile.serve  NEXT_STEPS.md  PRD.md  README.md  TRAINING_REPORT.md  anima_module.yaml  docker-compose.serve.yml  pyproject.toml
assets/: hero.html
configs/: debug.toml  default.toml  paper.toml
docker/: Dockerfile.cuda  Dockerfile.mlx  docker-compose.yaml
papers/: 2603.06920.txt
prds/: PRD-01-foundation.md  PRD-02-core-model.md  PRD-03-inference.md  PRD-04-evaluation.md  PRD-05-api-docker.md  PRD-06-ros2-integration.md  PRD-07-production.md  README.md
scripts/: find_batch_size.py  prepare_llvip.py  train.py
src/anima_dlrmamba/: __init__.py  config.py  data.py  eval.py  export.py  infer.py  losses.py  ros2_node.py  serve.py  train.py
src/anima_dlrmamba/models/: __init__.py  backbone.py  fusion.py  head.py  model.py  ss2d.py
tasks/: INDEX.md  PRD-0101.md  PRD-0102.md  PRD-0103.md  PRD-0201.md  PRD-0202.md  PRD-0203.md  PRD-0204.md  PRD-0205.md  PRD-0301.md  PRD-0302.md  PRD-0401.md  PRD-0402.md  PRD-0403.md  PRD-0501.md  PRD-0502.md  PRD-0601.md  PRD-0602.md  PRD-0701.md  PRD-0702.md
tests/: test_config.py  test_distillation_losses.py  test_low_rank_ss2d.py  test_model_forward.py
